EDQS: optimize attributes and latest kv